--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,8 @@
 ---
 # defaults file for ssl-key
+pki_key_suffix: '.key'
+pki_cert_suffix: '.crt'
+
+pki_keys_subdir : 'private'
+pki_certs_subdir : 'issued'
+pki_ca_cert_subdir : '.'
