eliminate duplication by leveraging andrewrothstein.trust-ca

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,4 +1,4 @@
 ---
-pki_dir: "~/pki"
-pki_key_suffix: "-key.pem"
-pki_cert_suffix: ".pem"
+pki_dir: ~/pki
+pki_key_suffix: -key.pem
+pki_cert_suffix: .pem
