--- a/circle.yml
+++ b/circle.yml
@@ -14,6 +14,9 @@ test:
     - ? | 
           circle-matrix <<"EHD"
             env:
+              - OS=alpine_3.3
+              - OS=alpine_3.4
+              - OS=alpine_edge
               - OS=centos_7
               - OS=fedora_23
               - OS=fedora_24
@@ -25,7 +28,6 @@ test:
               - export UPSTREAM=andrewrothstein/docker-ansible-role
 
             script:
-              - docker pull $UPSTREAM:$OS
               - echo "FROM $UPSTREAM:$OS" > Dockerfile.$OS
               - docker build -t $CIRCLE_PROJECT_REPONAME:$OS -f Dockerfile.$OS .
 
