--- a/meta/main.yml
+++ b/meta/main.yml
@@ -30,5 +30,5 @@ dependencies:
   - role: andrewrothstein.trust-ca
     version: v1.0.5
     trust_ca_pki_dir: '{{pki_dir}}'
-    trust_ca_pki_suffix: '{{pki_cert_suffix}}
+    trust_ca_pki_suffix: '{{pki_cert_suffix}}'
 
