--- a/vars/Alpine.yml
+++ b/vars/Alpine.yml
@@ -1,6 +1,5 @@
 ---
-ssl_key_pkgs :
+ssl_key_pkgs:
   - ca-certificates
-
 ssl_key_pki_cert_dir : /etc/ssl/certs
-ssl_key_pki_key_dir : /etc/ssl/private
+ssl_key_pki_key_dir : /etc/ssl
