--- a/test.yml
+++ b/test.yml
@@ -2,4 +2,4 @@
 - hosts: all
   roles:
     - role: '{{playbook_dir}}'
-      pki_dir: '{{playbook_dir}}'
+      pki_dir: '{{playbook_dir}}/test-pki'
